// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginButton /> Snapshot should render properly with default width 1`] = `
.mainContainer-container-hideBorder {
  flex-direction: row;
  background-color: #010101;
  border-color: #121212;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  padding: 0px;
  border-width: 0px;
}

.mainContainer-container-hideBorder:hover {
  cursor: pointer;
  background-color: #F7F7F7;
}

.mainContainer-container-hideBorder:active {
  background-color: #343434;
}

.iconContainer-container {
  width: 38px;
  height: 38px;
  background-color: undefined;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  border-width: 1px;
  padding: 0px;
}

.iconContainer-container:hover {
  cursor: pointer;
  background-color: #F7F7F7;
}

.iconContainer-container:active {
  background-color: #343434;
}

.text-text {
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  color: #454545;
  vertical-align: middle;
  display: inline-block;
}

.ou {
  display: flex;
  position: absolute;
  top: undefined;
  bottom: undefined;
  left: 2px;
  right: undefined;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.oumargin {
  margin: 10px;
  margin-left: undefined;
  margin-right: undefined;
  margin-top: undefined;
  margin-bottom: undefined;
  display: flex;
  position: relative;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  max-width: undefined;
  width: undefined;
}

<button
  className="mainContainer-container-hideBorder"
  onClick={[Function]}
>
  <div
    className="ou"
  >
    <div
      className="iconContainer-container"
    >
      <apple.svg
        alwaysdark="#121212"
        alwayslight="#FFFFFF"
        basalt="#8A8A8A"
        crystal="#FFFFFF"
        crystalhover="#F7F7F7"
        crystalpressed="#EEEEEE"
        disabled="#FAFAFA"
        glacialblue="#3D98D2"
        granite="#ABABAB"
        larchyellow="#F4BE19"
        larchyellowhover="#F5D624"
        larchyellowpressed="#F3A70C"
        limestone="#E2E2E2"
        limestonehover="#EEEEEE"
        limestonepressed="#D0D0D0"
        obsidian="#121212"
        overlay="rgba(18,18,18,0.3)"
        paintbrushred="#E05666"
        palousegreen="#00A87E"
        palousegreenhighlight="#DEF3EC"
        palousegreenhover="#43B893"
        palousegreenpressed="#00986A"
        quartz="#FAFAFA"
        tintcolor="#00A87E"
      />
    </div>
  </div>
  <div
    className="oumargin"
  >
    <div
      className="text-text"
    >
      This is a login button
    </div>
  </div>
</button>
`;

exports[`<LoginButton /> Snapshot should render properly with enabling full width 1`] = `
.iconContainer-container {
  width: 38px;
  height: 38px;
  background-color: undefined;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  border-width: 1px;
  padding: 0px;
}

.iconContainer-container:hover {
  cursor: pointer;
  background-color: #F7F7F7;
}

.iconContainer-container:active {
  background-color: #343434;
}

.text-text {
  font-size: 16px;
  font-weight: bold;
  font-family: Lato, sans-serif;
  color: #454545;
  vertical-align: middle;
  display: inline-block;
}

.ou {
  display: flex;
  position: absolute;
  top: undefined;
  bottom: undefined;
  left: 2px;
  right: undefined;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  z-index: 1;
  height: undefined;
  width: undefined;
}

.oumargin {
  margin: 10px;
  margin-left: undefined;
  margin-right: undefined;
  margin-top: undefined;
  margin-bottom: undefined;
  display: flex;
  position: relative;
  flex-basis: auto;
  flex-grow: 0;
  flex-shrink: 1;
  flex-direction: row;
  align-items: stretch;
  justify-content: flex-start;
  background-color: undefined;
  height: undefined;
  max-width: undefined;
  width: undefined;
}

.mainContainer-container-fullWidth-hideBorder {
  flex-direction: row;
  background-color: #010101;
  border-color: #121212;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 4px;
  padding: 0px;
  width: 100%;
  border-width: 0px;
}

.mainContainer-container-fullWidth-hideBorder:hover {
  cursor: pointer;
  background-color: #F7F7F7;
}

.mainContainer-container-fullWidth-hideBorder:active {
  background-color: #343434;
}

<button
  className="mainContainer-container-fullWidth-hideBorder"
  onClick={[Function]}
>
  <div
    className="ou"
  >
    <div
      className="iconContainer-container"
    >
      <apple.svg
        alwaysdark="#121212"
        alwayslight="#FFFFFF"
        basalt="#8A8A8A"
        crystal="#FFFFFF"
        crystalhover="#F7F7F7"
        crystalpressed="#EEEEEE"
        disabled="#FAFAFA"
        glacialblue="#3D98D2"
        granite="#ABABAB"
        larchyellow="#F4BE19"
        larchyellowhover="#F5D624"
        larchyellowpressed="#F3A70C"
        limestone="#E2E2E2"
        limestonehover="#EEEEEE"
        limestonepressed="#D0D0D0"
        obsidian="#121212"
        overlay="rgba(18,18,18,0.3)"
        paintbrushred="#E05666"
        palousegreen="#00A87E"
        palousegreenhighlight="#DEF3EC"
        palousegreenhover="#43B893"
        palousegreenpressed="#00986A"
        quartz="#FAFAFA"
        tintcolor="#00A87E"
      />
    </div>
  </div>
  <div
    className="oumargin"
  >
    <div
      className="text-text"
    >
      This is a login button
    </div>
  </div>
</button>
`;
